# LitLogger

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci-docs.yaml  ci-examples.yaml  ci-integrations.yaml  ci-mypy.yaml  ci-unittests.yaml  general_checks.yaml  push_wheel.yaml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  install.rst  make.bat
docs/source/_static/: main.css
docs/source/_templates/autosummary/: classtemplate.rst
docs/source/api/: experiment.rst  logger.rst  module_api.rst
docs/source/guide/: artifacts.rst  examples.rst  lightning.rst  media.rst  standalone.rst  workflows.rst
docs/source/tutorials/: complete_workflow.rst  file_media_model.rst  lightning.rst  litserve.rst  quickstart.rst
examples/: file_media_model_usage.py  lightning-autoencoder.py  lightning_autoencoder.py  litserve_inference.py  new_api_usage.py  standalone_usage.py
examples/complete_workflow/: fetch.py  train.py
src/litlogger/: __init__.py  _module.py  _preinit.py  artifacts.py  background.py  colors.py  diagnostics.py  experiment.py  experiment_legacy.py  experiment_support.py  file_writer.py  generator.py  init.py  logger.py  media.py  printer.py  series.py  types.py
src/litlogger/api/: __init__.py  artifacts_api.py  auth_api.py  client.py  media_api.py  metrics_api.py  utils.py
src/litlogger/capture/: windows.py
src/litlogger/models/: __init__.py  cloud.py  registry.py  serialization.py
tests/: __init__.py  conftest.py
tests/integrations/: __init__.py  lightning_logger_cases.py  test_lightning_logger.py  test_model_registry.py  test_pytorch_litlogger.py  test_standalone.py  test_standalone_lifecycle.py  test_standalone_media.py  test_standalone_metadata.py  test_standalone_metrics.py
tests/integrations/scripts/: run_lightning_save_logs.py
tests/unittests/: test_artifacts.py  test_background_thread.py  test_colors.py  test_diagnostics.py  test_experiment.py  test_experiment_media.py  test_experiment_metadata.py  test_experiment_metrics.py  test_experiment_support.py  test_file_writer.py  test_generator.py  test_init.py  test_logger.py  test_logger_deprecation.py  test_media.py  test_module.py  test_new_api.py  test_preinit.py  test_series.py  test_training.py
tests/unittests/api/: test_artifacts_api.py  test_auth_api.py  test_client.py  test_media_api.py  test_metrics_api.py  test_utils.py
tests/unittests/capture/: test_posix.py  test_windows.py
tests/unittests/legacy/: test_experiment.py  test_init.py
tests/unittests/models/: test_registry.py
